# Calculator

./: CMakeLists.txt  CMakePresets.json
include/: function.hpp  operation.hpp  token.hpp
source/: function.cpp  main.cpp  operation.cpp  single.cpp  token.cpp
